--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -28,9 +28,9 @@ V této kapitole ...
 
 \section{Zachycení byznysového konextu}
 
-Přístup ADDA doporučuje popsat byznysová pravidla pomocí
+Přístup \gls{ADDA} doporučuje popsat byznysová pravidla pomocí
 vlastního, na míru šitého, doménově specifického jazyka~\cite{cemus2015automated}.
-V našem případě můžeme jazykem DSL popsat kompletně i celý
+V našem případě můžeme jazykem \gls{DSL} popsat kompletně i celý
 byznysový kontext.
 
 \section{Metamodel byznys kontextu}\label{sec:metamodel}
