--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -11,7 +11,7 @@
 
 \section{Možností uplatnění navrženého frameworku}
 
-\section{Další možnosti uplatnění AOP v SOA}
+\section{Další možnosti uplatnění \gls{AOP} v \gls{SOA}}
 
 \todo{
 \begin{itemize}
