--- a/k336_thesis_macros.sty
+++ b/k336_thesis_macros.sty
@@ -119,7 +119,7 @@ I declare that I elaborated this thesis on my own and that I mentioned all the i
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % upravuje výpis seznamu zkratek
-\makeatletter							
+\makeatletter
 \renewcommand{\thenomenclature}{%
   \@ifundefined{chapter}%
   {
@@ -141,7 +141,7 @@ I declare that I elaborated this thesis on my own and that I mentioned all the i
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % výpis typu práce
 
-\def \translate{
+\def \dptranslate{
 	\iflanguage{czech}{
 		 \typeout{************************************************}
 		 \typeout{Zvoleny jazyk: cestina}
